--- a/bootcamphtml/index.html
+++ b/bootcamphtml/index.html
@@ -5,12 +5,83 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="" />
+
     <title>Document</title>
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+        
+        td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>welcome to js</h1>
-    <script src="./object.js"></script>
+    <div id="elm">Users:</div>
+    <ul>
+        <li>John</li>
+        <li>Pete</li>
+    </ul>
+    <script>
+        let elm = document.body.children[1];
+        console.log(elm);
+        elm.style.backgroundColor = "red";
+    </script>
 </body>
 
 </html>
+
+<!-- <h1>welcome to js</h1>
+<script src="./spread-operator.js"></script>
+<button onclick="myFunction()">click me</button>
+<!-- <body>
+
+    <div>
+
+    </div>
+
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>12</td>
+            <td>13</td>
+            <td>14</td>
+            <td>15</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>17</td>
+            <td>18</td>
+            <td>19</td>
+            <td>20</td>
+        </tr>
+    </table>
+    <script>
+        let table = document.body.children[1];
+
+        for (let i = 0; i < table.rows.length; i++) {
+            let row = table.rows[i];
+            row.cells[i].style.backgroundColor = "red";
+        }
+    </script>
+
+</body>
+
+</html> -->
